--- a/resources/templates/create/leagues.html
+++ b/resources/templates/create/leagues.html
@@ -1,4 +1,6 @@
-{% extends 'nav/base.html' %} {% block content %}
+{% extends 'nav/base.html' %} 
+
+{% block content %}
 <div class="container">
     <div class="row">
         <div class="col-xs-8 col-xs-offset-2">
@@ -21,30 +23,12 @@
                         </div>
                         
                         {% if auth() %}
-                            {% if auth().is_subscribed('masonite-test') %}
                                 <div class="form-group">
                                     <button class="btn btn-success" type="submit" name="submit">Create League</button>
                                 </div>
-                            {% elif auth().is_subscribed() %}
-                                <div>
-                                    You must be subsribed to the Masonite Test plan to create leagues. You are subscribed to the {{ auth().plan() }} plan
-                                    <a href="/leaguepass" class="btn btn-success">
-                                        Become a subscriber
-                                    </a>
-                                </div>
-                            {% else %}
-                                <div>
-                                    You must be a subscriber to create a league 
-                                    <a href="/leaguepass" class="btn btn-success">
-                                        Become a subscriber
-                                    </a>
-                                </div>
-                            {% endif %}
                         {% else %}
-                        <div>You need to login</div>
+                            <div>You need to login</div>
                         {% endif %}
-
-
                     </form>
                 </div>
             </div>
