--- a/resources/templates/nav/base.html
+++ b/resources/templates/nav/base.html
@@ -75,10 +75,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="/dashboard/profile">Profile</a>
-                                </li>
-                                <li>
-                                    <a href="/dashboard/settings">Settings</a>
+                                    <a href="{{ route('settings.leagues') }}">Settings</a>
                                 </li>
                                 <li role="separator" class="divider"></li>
                                 <li>
