--- a/resources/templates/leagues/schedule.html
+++ b/resources/templates/leagues/schedule.html
@@ -14,9 +14,6 @@
             <h3 class="text-center">Create A Schedule</h3>
 
             <form action="/league/{{ league.id }}/add-schedule" method="POST">
-                <!-- {{ csrf_field|safe }}
-                <input type="submit">
-            </form> -->
                 {{ csrf_field|safe }}
                 <input type="hidden" value="{{ league.id }}" name="league_id">
 
@@ -41,7 +38,7 @@
                 
                 <div class="form-group">
                     <label for="datapicker">Scheduled For</label>
-                    <input type="text" id="datepicker" name="scheduled_time" class="form-control" required>
+                    <input type="text" id="datepicker" name="scheduled_time" class="form-control" required autocomplete="off">
                 </div>
 
 
@@ -56,10 +53,11 @@
         {% endif %}
 
          {% for schedule in schedules %}
-            <div class="col-xs-6 col-md-4 text-center" style="border: 1px solid gray; margin: 10px">
+            <div class="col-xs-6 col-md-4 text-center" style="padding: 10px; background-color: #f5f5f5; margin: 10px">
                 <p>{{ schedule.team1.name }}</p>
                 <p>vs</p>
                 <p>{{ schedule.team2.name }}</p>
+                <p>on {{ schedule.scheduled_for.to_formatted_date_string() }}</p>
 
                 {% if auth() and auth().is_league_owner(league) %}
                 <form action="/league/{{ league.id }}/remove-schedule" method="POST">
@@ -73,6 +71,8 @@
                 {% endif %}
                 
             </div>
+            {% else %}
+            <h3>No Schedules Set</h3>
             {% endfor %}
     </div>
 </div>
