--- a/resources/templates/leagues/teams.html
+++ b/resources/templates/leagues/teams.html
@@ -4,6 +4,7 @@
 <div class="panel panel-default">
     <div class="panel-heading">Teams</div>
     <div class="panel-body">
+        {% include 'helpers/messages.html' %}
         <div class="text-center">
             <a href="{{ route('create.teams') }}?back={{ route('league.join', {'id': league.id}) }}">
                 <div class="btn btn-success">
@@ -12,32 +13,49 @@
             
         </div>
         {% for chunk in teams.chunk(3) %}
-        
-        <div class="row">
-        {% for team in chunk %}
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div>
-                    <img src="/logos/{{ team.picture }}"
-                        style="max-height: 500px" 
-                        alt="team logo" 
-                        onError="this.onerror=null;this.src='/static/logos/noimage.jpg';" 
-                        class="img-responsive">
+            <div class="row">
+            {% for team in chunk %}
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="text-center">
+                        <img src="/logos/{{ team.picture }}"
+                            style="height: 200px" 
+                            alt="team logo" 
+                            onError="this.onerror=null;this.src='/static/logos/noimage.jpg';" 
+                            class="">
+                    </div>
+
+                    <div class="text-center">
+                        <h2>{{ team.name }}</h2>
+                        <h4>Owned By {{ team.owner.name }}</h4>
+                        <h4>Points {{ team.points }}</h4>
+                    </div>
+                    
+                    {% if auth() and auth().is_league_owner(league) %}
+                    <div class="text-center">
+                        <form action="{{ route('league.points.change', {'id': league.id}) }}" method="POST">
+                            {{ csrf_field|safe }}
+                            {{ back(request().path)|safe }}
+                            <input type="hidden" value="{{ team.id }}" name="team">
+                            <div class="form-group">
+                                <input class="form-control" type="text" value="{{ team.points }}" name="points">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-success">Change points</button>
+                            </div>
+                        </form>
+                    </div>
+                    {% endif %}
+
+                    <hr>
+
+                    <h3 class="text-center">Pokemon</h3>
+
+                    {% for drafted in team.get_team_pokemon(league) %}
+                        <h4>{{ drafted.pokemon.name }}</h4>
+                    {% endfor %}
                 </div>
-
-                <div class="text-center">
-                    <h2>{{ team.name }}</h2>
-                </div>
-
-                <hr>
-
-                <h3 class="text-center">Pokemon</h3>
-
-                {% for drafted in team.get_team_pokemon(league) %}
-                    <h4>{{ drafted.pokemon.name }}</h4>
-                {% endfor %}
+            {% endfor %}
             </div>
-        {% endfor %}
-        </div>
         {% endfor %}
     </div>
 </div>
