--- a/resources/templates/discover.html
+++ b/resources/templates/discover.html
@@ -6,11 +6,16 @@
 <div class="container">
     <div class="row">
         <form action="" method="GET">
+        <div class="col-xs-12 col-sm-10">
             <input type="text" class="form-control" name="search">
+        </div>
+        <div class="col-xs-12 col-sm-2">
             <button class="btn btn-success" type="submit">
                 Search
             </button>
+        </div>
         </form>
+
         {% for league in leagues %} 
         <div class="col-xs-12 col-md-3">
             <h3>{{ league.name }}</h3>
@@ -22,11 +27,13 @@
                 View
             </a>
         </div>
+        {% else %}
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="text-center">No Leagues Found</h3>
+            </div>
+        </div>
         {% endfor %}
-
-        {% if not leagues %}
-            <h3 class="text-center">No Leagues Found</h3>
-        {% endif %}
         
     </div>
 </div>
