--- a/resources/templates/nav/base.html
+++ b/resources/templates/nav/base.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">GBA League</a>
+                <a class="navbar-brand" href="/">GBA League</a>
             </div>
     
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -38,9 +38,11 @@
                     <li>
                         <a href="/discover">Discover</a>
                     </li>
+                    {% if auth() %}
                     <li>
-                        <a href="/premium">GBA League Pass</a>
+                        <a href="{{ route('settings.plans') }}">GBA League Pass</a>
                     </li>
+                    {% endif %}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Create
                             <span class="caret"></span>
@@ -52,10 +54,6 @@
                             <li>
                                 <a href="/create/league">Create A League</a>
                             </li>
-                            <li>
-                                <a href="/create/leagues">Create A Tournament</a>
-                            </li>
-
                         </ul>
                     </li>
                 </ul>
