--- a/resources/templates/auth/login.html
+++ b/resources/templates/auth/login.html
@@ -7,11 +7,12 @@
             <div class="panel panel-default">
                 <div class="panel-heading">Login</div>
                 <div class="panel-body">
+                {% include 'helpers/validation.html' %}
                 <form action="/login" method="POST">
                     {{ csrf_field|safe }}
 
                     <div class="form-group">
-                        <label for="">Username</label>
+                        <label for="">Email</label>
                         <input type="text" name="username" class="form-control">    
                     </div>
 
@@ -22,6 +23,10 @@
                     
                     <div class="form-group text-center">
                         <button type="submit" class="btn btn-success">Login</button>
+                    </div>
+
+                    <div class="form-group text-center">
+                        <p>Forgot your password? <a href="{{ route('forgot.password') }}">Click here to reset your password</a></p>
                     </div>
                 </form>
                 </div>
