--- a/resources/templates/settings/plans.html
+++ b/resources/templates/settings/plans.html
@@ -54,6 +54,7 @@
                     <li>Gain you access to connecting your discord guild for real time notifications</li>
                     <li>Allow you to join unlimited leagues</li>
                     <li>Create unlimited leagues</li>
+                    <li>Create unlimited teams</li>
                     <li>Unlimited league members</li>
                     <li>Remove ads from the site</li>
                 </ul>
