--- a/resources/templates/auth/login.html
+++ b/resources/templates/auth/login.html
@@ -22,11 +22,11 @@
                     </div>
                     
                     <div class="form-group text-center">
-                        <button type="submit" class="btn btn-success">Login</button>
+                        <button type="submit" class="btn btn-success">Login</button> or <a href="{{ route('register') }}" class="btn btn-primary">Register</a>
                     </div>
-
+                    <hr>
                     <div class="form-group text-center">
-                        <p>Forgot your password? <a href="{{ route('forgot.password') }}">Click here to reset your password</a></p>
+                        <p>Forgot your password? <a href="{{ route('forgot.password') }}" class="btn btn-primary">Reset Password</a></p>
                     </div>
                 </form>
                 </div>
