added better reporting to leagues and teams settings

--- a/resources/templates/settings/leagues.html
+++ b/resources/templates/settings/leagues.html
@@ -23,6 +23,8 @@
                 </div>
             </div>
             <hr>
+        {% else %}
+        <h4>You are not in any leagues</h4>
         {% endfor %}
     </div>
 </div>
