fixed email template for forgotten passwords

--- a/resources/templates/email/request_password.html
+++ b/resources/templates/email/request_password.html
@@ -1,7 +1,7 @@
 <h2>You have requested a new password. Click the link below to reset your password.</h2>
 
 <div>
-    <a href="{{ site }}/reset?v={{ user.remember_token }}">{{ site }}/reset/password?v={{ user.remember_token }}</a>
+    <a href="{{ site }}/reset/password?v={{ user.remember_token }}">{{ site }}/reset/password?v={{ user.remember_token }}</a>
 
 </div>
 <br>
