--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -8,7 +8,7 @@
             <div class="overlay" style="background-color: black;">
                 <img src="/static/logos/banner.jpg" class="img-responsive" style="opacity: 0.2">
                 
-                <div style="position: absolute; top: 35%; left: 35%; color: white; text-align: center">
+                <div class="hidden-xs hidden-sm" style="position: absolute; top: 35%; left: 35%; color: white; text-align: center">
                     <h1>Global Battle Association</h1>
                     <a href="{{ route('discover') }}">
                         <h4 class="btn btn-success">Discover</h4>
@@ -20,7 +20,25 @@
 </section>
 
 <section>
+    <div class="row">
+        <div class="col-xs-6">
+            <a href="{{ route('create.leagues') }}">
+                <div class="btn btn-primary" style="display: block">
+                    Create a league
+                </div>
+            </a>
+        </div>
+        <div class="col-xs-6">
+            <a href="{{ route('register') }}">
+                <div class="btn btn-danger" style="display: block">
+                    Register
+                </div>
+            </a>
+        </div>
+        <div class="col-xs-6"></div>
+    </div>
     <h2 class="text-center">Start Your Legacy</h2>
+
     <div class="row text-center">
         <div class="col-xs-12">
             <div class="col-xs-12 col-sm-4">
