--- a/resources/templates/auth/register.html
+++ b/resources/templates/auth/register.html
@@ -11,7 +11,7 @@
 
             <div class="form-group">
                 <label for="">Username</label>
-                <input type="text" name="username" class="form-control">
+                <input type="text" name="username" class="form-control" maxlength="20">
             </div>
 
             <div class="form-group">
