--- a/resources/templates/nav/base.html
+++ b/resources/templates/nav/base.html
@@ -88,7 +88,9 @@
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
-    </nav>
+    
+    <div class="alert alert-warning" style="margin: 0">We have receieved elevated rates of errors in the past hour and have proactively fixed many of them. The site is still in beta so if you find any issues be sure to reach out on <a href="http://twitter.com/gbaleague_com">Twitter: @gbaleague_com</a></div>
+</nav>
 
     {% block content %}{% endblock %}
 
