added info message instead of warning message

--- a/resources/templates/nav/base.html
+++ b/resources/templates/nav/base.html
@@ -89,7 +89,7 @@
         </div>
         <!-- /.container-fluid -->
     
-    <div class="alert alert-warning" style="margin: 0">We have receieved elevated rates of errors and are proactively fixing them. The site is still in beta so if you find any issues be sure to reach out on <a href="http://twitter.com/gbaleague_com">Twitter: @gbaleague_com</a></div>
+    <div class="alert alert-info" style="margin: 0">The site is still in beta so if you find any issues be sure to reach out on <a href="http://twitter.com/gbaleague_com">Twitter: @gbaleague_com</a></div>
 </nav>
 
     {% block content %}{% endblock %}
